fixed spacing on home page

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -10,9 +10,9 @@
   <br />
 </div>
 
-<div class="container col-lg-12">
-  <div class="row row-flex row-flex-wrap">
-    <div class="col-md-3">
+<div class="container col-md-12">
+  <div class="row-flex row-flex-wrap">
+    <div class="col-md-6">
       <div class="well">
         <h2>
           <a href ui-sref="ob.connector.nodes.all" class="text-normal-color">
@@ -28,7 +28,7 @@
         </ul>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-6">
       <div class="well">
         <h2>
           <a href ui-sref="ob.design" class="text-normal-color">
@@ -44,8 +44,8 @@
       </div>
     </div>
   </div>
-  <div class="row row-flex row-flex-wrap">
-    <div class="col-md-3">
+  <div class="row-flex row-flex-wrap">
+    <div class="col-md-6">
       <div class="well">
         <h2>
           <a href ui-sref="ob.process" class="text-normal-color">
@@ -60,7 +60,7 @@
         </ul>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-6">
       <div class="well">
         <a href ui-sref="ob.analyze" class="text-normal-color">
           <h2>
