--- a/public/pages/flow-editor-omnibox.html
+++ b/public/pages/flow-editor-omnibox.html
@@ -10,12 +10,19 @@
     <br>
     <div class="panel panel-default">
       <div class="panel-body">
-        <h3 class="text-center">This Node requires setup</h3>
-        <p class="text-center">
-          Click Setup to start configuring this node
-        </p>
-        <br>
-        <a ui-sref="ob.nodewizard.add({nodeTypeId: nodeType._id})" class="btn btn-primary btn-lg btn-block">Setup</a>
+        <div class="row">
+          <div class="col-xs-12">
+            <img class="center-block" height="100" ng-src="{{nodeType.logo}}">
+          </div>
+          <div class="col-xs-12">
+            <h3 class="text-center">This Node requires setup</h3>
+            <p class="text-center">
+              Click Setup to start configuring this node
+            </p>
+            <br>
+            <a ui-sref="ob.nodewizard.add({nodeTypeId: nodeType._id})" class="btn btn-primary btn-lg btn-block">Setup</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
