--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -13,9 +13,13 @@
     <div class="panel-body panel-scrollable">
       <form class="form">
         <div ng-include="flowNodeType.formTemplatePath"></div>
+        <br>
         <div class="form-group debug-node-form">
-          <label for="debug-node">Debug</label>
-          <input  id="debug-node" class="form-control" type="checkbox" ng-model="flowNode.debug">
+          <label class="pull-left" for="debug-node">Debug</label>
+          <div class="pull-right btn-group">
+            <input type="button" class="btn btn-default" ng-model="flowNode.debug" btn-radio="false" value="No">
+            <input type="button" class="btn btn-default" ng-model="flowNode.debug" btn-radio="true" value="Yes">
+          </div>
         </div>
       </form>
     </div>
