--- a/public/pages/node_forms/subdevice_form.html
+++ b/public/pages/node_forms/subdevice_form.html
@@ -4,12 +4,15 @@
 	    <input  id="name" class="form-control" type="text" ng-model="flowNode.name">    
 	</div>
 	<div class="form-group">
-		<div class="col-xs-11">
-		    <label for="use-static-message">Use Static Message</label>
+		<div class="pull-left">
+		    <label class="form-label" for="use-static-message">Forward Payload</label>
 	    </div>
-	    <div class="col-xs-1">
-	    	<input  id="use-static-message" type="checkbox" ng-model="flowNode.useStaticMessage">
-		</div>
+	    
+    	<div class="pull-right btn-group">
+			<input type="button" class="btn btn-default" ng-model="flowNode.useStaticMessage" btn-radio="true" value="No">
+			<input type="button" class="btn btn-default" ng-model="flowNode.useStaticMessage" btn-radio="false" value="Yes">
+        </div>
+	
 	</div>
 	<br><br>
 	<div ng-if="flowNode.useStaticMessage">
