remove messages and custom channel

--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -7,14 +7,6 @@
         </h1>
     </div>
 
-    <ul class="nav nav-tabs">
-        <li ui-sref-active="active">
-            <a href="" ui-sref=".nodes.all">Nodes</a>
-        </li>
-        <li ui-sref-active="active">
-            <a href="" ui-sref=".advanced.messaging">Advanced</a>
-        </li>
-    </ul>
-    <div class="tab-content" ui-view="">
+    <div ui-view="">
     </div>
 </div>
