--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -1,6 +1,6 @@
 <h2 class="text-center">Your Active Nodes</h2>
 
-<div class="row node-container">
+<div class="row">
     <div class="col-xs-12 col-sm-offset-3 col-sm-6">
         <form class="form">
             <div class="form-group">
