--- a/public/pages/node_forms/microblu_form.html
+++ b/public/pages/node_forms/microblu_form.html
@@ -9,8 +9,8 @@
 <div class="form-group">
 	<label class="form-label" for="pin-type">Pin Type</label>
 	<select id="pin-type" class="form-control" ng-model="flowNode.pinType">
-		<option value="digital">Digital (0/1)</option>
-		<option value="analog">Analog (0-255)</option>
-		<option value="servo">Servo (0-180)</option>
+		<option value="OUTPUT">Digital (0/1)</option>
+		<option value="PWM">Analog (0-255)</option>
+		<option value="SERVO">Servo (0-180)</option>
 	</select>
 </div>
