--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
 <footer></footer>
 
-<script src="/assets/javascripts/skynet.bundle.js"></script>
+<script src="//d1g8h12lk9ydf.cloudfront.net/js/v1.1.0/skynet.bundle.js"></script>
 <script src="/assets/javascripts/dist/dependencies.js"></script>
 <script src="/assets/javascripts/dist/application.js"></script>
 
