use correct logos on subdevice page, make sure message doesn't conflict with .device

--- a/public/pages/connector/devices/detail/subdevices.html
+++ b/public/pages/connector/devices/detail/subdevices.html
@@ -5,8 +5,7 @@
         </div>
         <div class="subdevice-panel panel-body center-block">
 
-                <div class="center-block subdevice-icon subdevice-icon-{{sub.type}}"></div>
-
+            <div class="node-thumbnail" ng-style="{ 'background-image': 'url(' + sub.logo + ')' }"></div>
 
             <div class="btn-group btn-group-justified">
                 <div class="btn-group">
