--- a/public/pages/flow-browser-shareflow.html
+++ b/public/pages/flow-browser-shareflow.html
@@ -1,3 +1,4 @@
-<div class="flow-browser-shareflows" ng-class="{ 'has-error' : shareFlowError, 'has-succes' : shareFlowSuccess }">
-    <textarea ng-model="activeFlowJSON" class="form-control share-flows" ng-change="handleActiveFlowChange(activeFlowJSON)"></textarea>
+<div class="flow-browser-shareflows" ng-class="{ 'has-error' : shareFlowError, 'has-success' : shareFlowSuccess }">
+		<pre ng-if="!activeFlowEdit">{{ activeFlow | json }}</pre>
+    <textarea ng-if="activeFlowEdit" ng-model="flowBrowser.activeFlowJson" class="form-control share-flows" ng-change="handleActiveFlowChange(flowBrowser.activeFlowJson)"></textarea>
 </div>
