--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -67,5 +67,5 @@
       <flow-editor flow="activeFlow"></flow-editor>
     </div>
   </div>
-  <flow-browser w-mousetrap="{'mod+c':unMousetrap}" flow="activeFlow" debug-lines="debugLines" node-types="nodeTypes" flow-node-types="flowNodeTypes" active-flow="activeFlow"></flow-browser>
+  <flow-browser flow="activeFlow" debug-lines="debugLines" node-types="nodeTypes" flow-node-types="flowNodeTypes" active-flow="activeFlow"></flow-browser>
 </div>
