--- a/public/pages/node_forms/microblu_form.html
+++ b/public/pages/node_forms/microblu_form.html
@@ -4,14 +4,15 @@
 </div>
 <div class="form-group">
 	<label class="form-label" for="pin">Pin</label>
-	<input id="pin" class="form-control" ng-model="flowNode.pin">
+	<input id="pin" class="form-control" ng-model="flowNode.pin" type="number">
 </div>
 <div class="form-group">
-	<label class="form-label" for="pin-type">Pin Type</label>
-	<select id="pin-type" class="form-control" ng-model="flowNode.pinType">
-		<option value="OUTPUT">Digital Write</option>
-		<option value="PWM">Analog Write</option>
-		<option value="SERVO">Servo Write</option>
-		<option value="INPUT">Digital Read</option>
+	<label class="form-label" for="pin-config">Pin Type</label>
+	<select id="pin-config" class="form-control" ng-model="flowNode.pinConfig">
+		<option value="analog-write">Analog Write</option>
+		<option value="digital-write">Digital Write</option>
+		<option value="servo-write">Servo Write</option>
+		<option value="analog-read">Analog Read</option>
+		<option value="digital-read">Digital Read</option>
 	</select>
 </div>
