Allow user to specify microblu payload key

--- a/public/pages/node_forms/microblu_form.html
+++ b/public/pages/node_forms/microblu_form.html
@@ -3,6 +3,10 @@
     <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
 </div>
 <div class="form-group">
+	<label class="form-label" for="key">Key</label>
+	<input id="key" class="form-control" ng-model="flowNode.key" type="text">
+</div>
+<div class="form-group">
 	<label class="form-label" for="pin">Pin</label>
 	<input id="pin" class="form-control" ng-model="flowNode.pin" type="number">
 </div>
