--- a/public/static/pebble-login.html
+++ b/public/static/pebble-login.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 			<title>Octoblu Login</title>
-      <link rel="stylesheet" type="text/css" href="/lib/bootstrap/dist/css/bootstrap.css">
+      <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="/assets/stylesheets/font-awesome.min.css">
       <script src="/lib/jquery/dist/jquery.js"></script>
       <script>
