--- a/public/pages/flow-browser-debug.html
+++ b/public/pages/flow-browser-debug.html
@@ -1,4 +1,4 @@
-<h5 ng-if="flow.selectedFlowNode.name">Selected Flow: {{ flow.selectedFlowNode.name }}</h5>
+<h5 ng-if="flow.selectedFlowNode.name">Selected Node: {{ flow.selectedFlowNode.name }}</h5>
 <ul class="flow-browser-debug">
   <li ng-repeat="debug in debugLines | filter : {node: flow.selectedFlowNode._id}">
   	<small>{{ debug.date | date: 'short'}}</small>
