--- a/public/pages/node_forms/webhook_form.html
+++ b/public/pages/node_forms/webhook_form.html
@@ -1,3 +1,7 @@
+<div class="form-group">
+  <label for="name">Name</label>
+  <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
+</div>
 <p>
 There are two ways to trigger your webhook:
 <br>
