added escaping of dot-prefixed keys in the flow model. Added Stripe api.

--- a/public/pages/node-wizard/add-channel/basic.html
+++ b/public/pages/node-wizard/add-channel/basic.html
@@ -9,7 +9,7 @@
 
       <div class="form-group" ng-class="{'has-error': errorMessage}">
         <label for="api-key" class="control-label">Password</label>
-        <input type="password" ng-model="newChannel.pass" class="form-control input-lg" id="api-key" required>
+        <input type="password" ng-model="newChannel.pass" class="form-control input-lg" id="api-key">
         <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
       </div>
 
