add clear and select all to flow editor

--- a/public/pages/flow-browser-debug-controls.html
+++ b/public/pages/flow-browser-debug-controls.html
@@ -1,5 +1,5 @@
 <div class="btn-group">
   <button class="btn btn-default btn-sm" ng-click="debugLines.length = 0">
-    <i class="fa fa-trash-o fa-lg"></i>
+    <i class="fa fa-ban fa-lg"></i>
   </button>
 </div>
