--- a/public/pages/node-wizard/add-subdevice/form.html
+++ b/public/pages/node-wizard/add-subdevice/form.html
@@ -1,36 +1,10 @@
-<div class="row" ng-hide="newSubdevice.plugin">
+<div class="row">
   <div class="col-xs-12 col-md-offset-3 col-md-6">
     <h1 class="text-center">
-      Updating your gateway...
+      Updating your genblu...
     </h1>
     <h1 class="text-center">
       <i class="fa fa-spin fa-refresh"></i>
     </h1>
-  </div>
-</div>
-
-<div class="row" ng-show="newSubdevice.plugin">
-  <div class="col-xs-12 col-md-offset-3 col-md-6">
-    <form class="form" ng-submit="addSubDevice()">
-      <div class="form-group">
-        <label class="control-label">Gateway</label>
-        <h4>{{newSubdevice.gateway.name}}</h4>
-      </div>
-
-      <div class="form-group" ng-class="{'has-error': errorMessage}">
-        <label for="name" class="control-label">Name</label>
-        <input type="text" ng-model="newSubdevice.name" class="form-control input-lg" id="name" placeholder="My {{nodeType.name}}" required>
-        <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
-      </div>
-
-      <schema-editor control="newSubdevice.schemaEditor" schema="newSubdevice.plugin.optionsSchema" model="newSubdevice.subdevice.options" allow-json-edit="false"></schema-editor>
-
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-lg btn-block">
-          <i class="fa fa-plus"></i>
-          Add
-        </button>
-      </div>
-    </form>
   </div>
 </div>
