--- a/public/pages/node-wizard/add-subdevice/form.html
+++ b/public/pages/node-wizard/add-subdevice/form.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-hide="device">
   <div class="col-xs-12 col-md-offset-3 col-md-6">
     <h1 class="text-center">
       Updating your genblu...
@@ -6,5 +6,26 @@
     <h1 class="text-center">
       <i class="fa fa-spin fa-refresh"></i>
     </h1>
+  </div>
+</div>
+
+<div class="row" ng-if="device">
+  <div class="col-xs-12 col-md-offset-3 col-md-6">
+    <h1>Configure your device</h1>
+    <form class="form" ng-submit="submit()">
+      <div class="form-group" ng-class="{'has-error': errorMessage}">
+        <label for="name" class="control-label">Name</label>
+        <input type="text" ng-model="device.name" class="form-control input-lg" id="name" placeholder="My {{nodeType.name}}" required>
+
+        <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
+      </div>
+
+
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary btn-lg btn-block">
+          Update
+        </button>
+      </div>
+    </form>
   </div>
 </div>
