--- a/public/pages/node-wizard/add-subdevice/form.html
+++ b/public/pages/node-wizard/add-subdevice/form.html
@@ -20,6 +20,9 @@
         <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
       </div>
 
+      <div class="form-group">
+        <schema-editor schema="device.optionsSchema" model="device.options" allow-json-edit="true" additional-properties="true"></schema-editor>
+      </div>
 
       <div class="form-group">
         <button type="submit" class="btn btn-primary btn-lg btn-block">
