--- a/public/pages/node-wizard/add-subdevice/form.html
+++ b/public/pages/node-wizard/add-subdevice/form.html
@@ -1,7 +1,7 @@
 <div class="row" ng-hide="device">
   <div class="col-xs-12 col-md-offset-3 col-md-6">
     <h1 class="text-center">
-      Updating your genblu...
+      Updating your gateblu...
     </h1>
     <h1 class="text-center">
       <i class="fa fa-spin fa-refresh"></i>
