Fixed Pebble Login via Provider

--- a/public/static/pebble-login.html
+++ b/public/static/pebble-login.html
@@ -4,81 +4,7 @@
       <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="/assets/stylesheets/font-awesome.min.css">
       <script src="/lib/jquery/dist/jquery.js"></script>
-      <script>
-        (function(){
-
-          function getParam(variable, url) {
-              if(!url) url = window.location.href;
-              if(!~url.indexOf('?')){
-                  return false;
-              }
-              var query = url.split('?')[1];
-              var vars = query.split('&');
-              for (var i = 0; i < vars.length; i++) {
-                  var pair = vars[i].split('=');
-                  if (pair[0] === variable) {
-                      return decodeURIComponent(pair[1]);
-                  }
-              }
-              return false;
-          }
-
-          function loginViaProvider(provider){
-            var url = '/api/oauth/' + provider;
-            url += '?mobile=true&referrer=' + encodeURIComponent('/static/pebble-login.html');
-            var authWindow = window.open(url, '_self', 'location=no,toolbar=no');
-
-            $(authWindow).on('loadstart', function (e) {
-                var url = e.originalEvent.url;
-                var uuidTest = /\?uuid=(.+)$/.exec(url);
-
-                console.log('Auth window loading url : ', url);
-
-                if (uuidTest) {
-                    var uuid = getParam('uuid', url),
-                        token = getParam('token', url);
-                        // Set new Skynet Tokens
-                    if (uuid && token) {
-                        console.log('Verified Credentials');
-                        window.location.href = "pebblejs://close#" + encodeURIComponent(JSON.stringify({
-                          uuid : uuid,
-                          token : token
-                        }));
-                    } else {
-                        console.log('No Credentials Backup' + JSON.stringify([uuid, token]));
-                        alert('Error logging in!');
-                    }
-
-                    authWindow.close();
-                }
-            });
-          }
-          $(document).ready(function(){
-            $('.login-via-provider').click(function(e){
-              e.preventDefault();
-              console.log('Here');
-              loginViaProvider($(this).attr('data-provider'));
-              return false;
-            });
-
-            $('#loginForm').submit(function(){
-              $.post('/api/auth', {
-                email : $('#email').val(),
-                password : $('#password').val()
-              }).success(function(currentUser){
-                window.location.href = "pebblejs://close#" + encodeURIComponent(JSON.stringify({
-                  uuid : currentUser.skynet.uuid,
-                  token : currentUser.skynet.token
-                }));
-              }).error(function(){
-                alert('There was an error signing into Octoblu');
-              });
-              return false;
-            });
-          });
-
-        })();
-      </script>
+      <script src="/static/pebble-login.js"></script>
 	</head>
 	<body>
     <div class="row">
