Fixed Expensify and added header parameters

--- a/public/pages/endpoint_selector.html
+++ b/public/pages/endpoint_selector.html
@@ -4,7 +4,8 @@
     <select id="selectedEndpoint" ng-model="selectedEndpoint" ng-options="getEndpointLabel(endpoint) for endpoint in resources" class="form-control"></select>
   </div>
 
-  <param-input ng-model="node.urlParams"   param-definitions="urlParamDefinitions"></param-input>
-  <param-input ng-model="node.queryParams" param-definitions="queryParamDefinitions"></param-input>
-  <param-input ng-model="node.bodyParams"  param-definitions="bodyParamDefinitions"></param-input>
+  <param-input ng-model="node.headerParams" param-definitions="headerParamDefinitions"></param-input>
+  <param-input ng-model="node.urlParams"   	param-definitions="urlParamDefinitions"></param-input>
+  <param-input ng-model="node.queryParams" 	param-definitions="queryParamDefinitions"></param-input>
+  <param-input ng-model="node.bodyParams"  	param-definitions="bodyParamDefinitions"></param-input>
 </div>
