--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -1,71 +1,77 @@
 <div class="design2 designer-container full-height">
-  <div class="logo-toolbar">
-    <img src="/assets/images/octoblu.png" height="50px"/>
+
+  <div class="flow-top-bar">
+    <flow-editor-omnibox omni-search="omniSearch" flow-nodes="activeFlow.nodes" selected-flow-node="activeFlow.selectedFlowNode" ></flow-editor-omnibox>
+
+    <div class="flow-toolbar">
+
+      <div class="input-group flow-name dropdown" >
+        <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name">
+        <span class="input-group-addon flow-dropdown dropdown-toggle" id="flowMenuDropdown" data-toggle="dropdown"  ng-click="flowMenuIsOpen = !flowMenuIsOpen">
+            <i class="fa fa-lg fa-angle-down"></i>
+        </span>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="flowMenuDropdown" style="height: {{flowSelectorHeight}}px;">
+          <li class="text-center" data-toggle="dropdown" ng-click="addFlow()"><a class="fa fa-plus" href></a></li>
+          <li role="presentation"  class="divider"></li>
+          <li class="" data-toggle="dropdown" ng-click="setActiveFlow(flow)" ng-repeat="flow in flows | orderBy: 'name'" >
+            <a ui-sref="flow({flowId: flow.flowId})">{{flow.name}}</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="flow-toolbar-btn-toolbar">
+        <div class="btn-group">
+          <button class="btn btn-default button-shadow" ng-click="deleteFlow(activeFlow)" tooltip="Delete Flow" tooltip-placement="bottom">
+            <i class="fa fa-lg fa-trash-o"></i>
+          </button>
+        </div>
+
+        <div class="btn-group">
+          <button ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}" class="btn btn-default button-shadow" tooltip="Zoom Out" tooltip-placement="bottom">
+            <i class="fa fa-minus"></i>
+          </button>
+          <button ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}" class="btn btn-default button-shadow" tooltip="Zoom In" tooltip-placement="bottom">
+            <i class="fa fa-plus"></i>
+          </button>
+        </div>
+
+        <div class="btn-group">
+          <button ng-click="stop()" ng-class="{ 'btn-danger': deviceOnline === false, stopping: stopping }" class="stop-button btn btn-default button-shadow" tooltip="Stop" tooltip-placement="bottom">
+            <i class="fa fa-stop"></i>
+          </button>
+          <button ng-click="start()" ng-class="{ 'btn-info': deviceOnline, deploying: deploying }" class="start-button btn btn-default button-shadow" tooltip="Start" tooltip-placement="bottom">
+            <i class="fa fa-play"></i>
+          </button>
+        </div>
+
+        <div class="btn-group" dropdown is-open="menuIsOpen">
+          <button class="btn btn-default button-shadow dropdown-toggle" tooltip="Menu" tooltip-placement="left" ng-click="menuIsOpen = !menuIsOpen">
+            <i class="fa fa-bars"></i>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-right" role="menu">
+            <li><a href ui-sref="ob.home"><i class="fa fa-home"></i> Home</a></li>
+              <li><a href ui-sref="ob.connector.nodes.all"><i class="fa fa-plug"></i> Connect</a></li>
+              <li><a href ui-sref="ob.process"><i class="fa fa-tasks"></i> Process</a></li>
+            <li><a href ui-sref="ob.analyze"><i class="fa fa-bar-chart"></i> Analyze</a></li>
+            <li><a href ui-sref="ob.community"><i class="fa fa-group"></i> Community</a></li>
+            <li><a href ui-sref="ob.profile"><i class="fa fa-user"></i> Profile</a></li>
+            <li><a href ui-sref="ob.admin.all"><i class="fa fa-lock"></i> Security</a></li>
+            <li><a href ng-click="logout()"><i class="fa fa-sign-out"></i> Sign out</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="flow-toolbar">
-
-    <div class="input-group flow-name dropdown" >
-      <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name">
-      <span class="input-group-addon flow-dropdown dropdown-toggle" id="flowMenuDropdown" data-toggle="dropdown"  ng-click="flowMenuIsOpen = !flowMenuIsOpen">
-          <i class="fa fa-lg fa-angle-down"></i>
-      </span>
-      <ul class="dropdown-menu" role="menu" aria-labelledby="flowMenuDropdown" style="height: {{flowSelectorHeight}}px;">
-        <li class="text-center" data-toggle="dropdown" ng-click="addFlow()"><a class="fa fa-plus" href></a></li>
-        <li role="presentation"  class="divider"></li>
-        <li class="" data-toggle="dropdown" ng-click="setActiveFlow(flow)" ng-repeat="flow in flows | orderBy: 'name'" >
-          <a ui-sref="flow({flowId: flow.flowId})">{{flow.name}}</a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="btn-group">
-      <button class="btn btn-default button-shadow" ng-click="deleteFlow(activeFlow)" tooltip="Delete Flow" tooltip-placement="bottom">
-        <i class="fa fa-lg fa-trash-o"></i>
-      </button>
-    </div>
-
-    <div class="btn-group">
-      <button ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}" class="btn btn-default button-shadow" tooltip="Zoom Out" tooltip-placement="bottom">
-        <i class="fa fa-minus"></i>
-      </button>
-      <button ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}" class="btn btn-default button-shadow" tooltip="Zoom In" tooltip-placement="bottom">
-        <i class="fa fa-plus"></i>
-      </button>
-    </div>
-
-    <div class="btn-group">
-      <button ng-click="stop()" ng-class="{ 'btn-danger': deviceOnline === false, stopping: stopping }" class="stop-button btn btn-default button-shadow" tooltip="Stop" tooltip-placement="bottom">
-        <i class="fa fa-stop"></i>
-      </button>
-      <button ng-click="start()" ng-class="{ 'btn-info': deviceOnline, deploying: deploying }" class="start-button btn btn-default button-shadow" tooltip="Start" tooltip-placement="bottom">
-        <i class="fa fa-play"></i>
-      </button>
-    </div>
-
-    <div class="btn-group" dropdown is-open="menuIsOpen">
-      <button class="btn btn-default button-shadow dropdown-toggle" tooltip="Menu" tooltip-placement="left" ng-click="menuIsOpen = !menuIsOpen">
-        <i class="fa fa-bars"></i>
-      </button>
-      <ul class="dropdown-menu dropdown-menu-right" role="menu">
-        <li><a href ui-sref="ob.home"><i class="fa fa-home"></i> Home</a></li>
-          <li><a href ui-sref="ob.connector.nodes.all"><i class="fa fa-plug"></i> Connect</a></li>
-          <li><a href ui-sref="ob.process"><i class="fa fa-tasks"></i> Process</a></li>
-        <li><a href ui-sref="ob.analyze"><i class="fa fa-bar-chart"></i> Analyze</a></li>
-        <li><a href ui-sref="ob.community"><i class="fa fa-group"></i> Community</a></li>
-        <li><a href ui-sref="ob.profile"><i class="fa fa-user"></i> Profile</a></li>
-        <li><a href ui-sref="ob.admin.all"><i class="fa fa-lock"></i> Security</a></li>
-        <li><a href ng-click="logout()"><i class="fa fa-sign-out"></i> Sign out</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <flow-editor-omnibox omni-search="omniSearch" flow-nodes="activeFlow.nodes" selected-flow-node="activeFlow.selectedFlowNode" ></flow-editor-omnibox>
 
   <div class="full-height" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
     <div class="workspace-container full-height" w-mousetrap="{'mod+c':copySelection, 'mod+x': cutSelection, 'mod+v':pasteSelection, 'backspace': deleteSelection, 'del': deleteSelection}">
       <flow-editor flow="activeFlow"></flow-editor>
     </div>
   </div>
+
+  <div class="logo-toolbar">
+    <img src="/assets/images/octoblu.png" height="50px"/>
+  </div>
+
   <flow-browser flow="activeFlow" debug-lines="debugLines" node-types="nodeTypes" flow-node-types="flowNodeTypes" active-flow="activeFlow"></flow-browser>
 </div>
