--- a/public/pages/node_forms/set_key_form.html
+++ b/public/pages/node_forms/set_key_form.html
@@ -9,6 +9,7 @@
 </div>
 
 <div class="form-group">
-  <label for="value">Value ( Reference incoming messages using <span ng-non-bindable>{{payload.values}}</span> )</label>
+  <label for="value">Value ( Reference incoming messages using <span ng-non-bindable>{{payload.values}}</span> )<br>
+  <span class="text-muted">The value must be a string.</span></label>
   <input id="value" class="form-control" ng-model="flowNode.value" required>
 </div>
