--- a/public/pages/node_forms/greater_than_form.html
+++ b/public/pages/node_forms/greater_than_form.html
@@ -10,5 +10,5 @@
 
 <div class="form-group">
   <label for="value">Value ( Reference incoming messages using <span ng-non-bindable>{{payload.values}}</span> )</label>
-  <input  id="value" class="form-control" type="number" ng-model="flowNode.value" required>
+  <input  id="value" class="form-control" ng-model="flowNode.value" required>
 </div>
