--- a/public/pages/node_forms/greater_than_form.html
+++ b/public/pages/node_forms/greater_than_form.html
@@ -3,12 +3,14 @@
   <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
 </div>
 
+<p>( Reference incoming messages using <span ng-non-bindable>{{payload.values}}</span> )</p>
+
 <div class="form-group">
-  <label for="key">Key</label>
-  <input  id="key" class="form-control" type="text" ng-model="flowNode.key" required>
+  <label for="left">Left Value</label>
+  <input  id="left" class="form-control" type="text" ng-model="flowNode.left" required>
 </div>
 
 <div class="form-group">
-  <label for="value">Value ( Reference incoming messages using <span ng-non-bindable>{{payload.values}}</span> )</label>
-  <input  id="value" class="form-control" ng-model="flowNode.value" required>
+  <label for="right">Right Value</label>
+  <input  id="right" class="form-control" ng-model="flowNode.right" required>
 </div>
