Only icons on auth login

--- a/public/static/auth-login.html
+++ b/public/static/auth-login.html
@@ -26,28 +26,28 @@
 	      </div>
 	      <div class="col-xs-6 col-lg-4 col-lg-offset-2">
 	        <p>
-	          <button class="btn-lg btn-primary btn-github login-via-provider" data-provider="github">
+	          <button class="btn-lg btn-block btn-primary btn-github login-via-provider" data-provider="github">
 	            <span class="fa fa-github"> Github</span>
 	          </button>
 	        </p><br>
 	      </div>
 	      <div class="col-xs-6 col-lg-4">
 	        <p>
-	          <button class="btn-lg btn-primary btn-facebook login-via-provider" data-provider="facebook">
+	          <button class="btn-lg btn-block btn-primary btn-facebook login-via-provider" data-provider="facebook">
 	            <span class="fa fa-facebook"> Facebook</span>
 	          </button>
 	        </p><br>
 	      </div>
 	      <div class="col-xs-6 col-lg-4 col-lg-offset-2">
 	        <p>
-	          <button class="btn-lg btn-primary btn-twitter login-via-provider" data-provider="twitter">
+	          <button class="btn-lg btn-block btn-primary btn-twitter login-via-provider" data-provider="twitter">
 	            <span class="fa fa-twitter"> Twitter</span>
 	          </button>
 	        </p><br>
 	      </div>
 	      <div class="col-xs-6 col-lg-4">
 	        <p>
-	          <button class="btn-lg btn-primary btn-google-plus login-via-provider" data-provider="google">
+	          <button class="btn-lg btn-block btn-primary btn-google-plus login-via-provider" data-provider="google">
 	            <span class="fa fa-google-plus"> Google+</span>
 	          </button>
 	        </p><br>
