--- a/public/pages/node_forms/output_form.html
+++ b/public/pages/node_forms/output_form.html
@@ -2,3 +2,8 @@
     <label for="name">Name</label>
     <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
 </div>
+
+<div class="form-group">
+    <label for="name">Topic</label>
+    <input  id="name" class="form-control" type="text" ng-model="flowNode.topic">
+</div>
