--- a/public/pages/node_forms/device_form.html
+++ b/public/pages/node_forms/device_form.html
@@ -17,6 +17,11 @@
     </div>
   </div>
 </div>
+<div class="form-group">
+  <label for="name">Filter By Topic</label>
+  <input  id="name" class="form-control" type="text" ng-model="flowNode.topic">
+</div>
+
 
 <div class="form-group" ng-if="flowNode.useStaticMessage">
   <device-message-form uuid="flowNode.uuid" token="flowNode.token" model="flowNode.staticMessage"></device-message-form>
