--- a/public/pages/node_forms/device_form.html
+++ b/public/pages/node_forms/device_form.html
@@ -18,7 +18,7 @@
 </div>
 <div class="form-group">
   <label for="name">Filter By Topic</label>
-  <input  id="name" class="form-control" type="text" ng-model="flowNode.topic">
+  <input  id="name" class="form-control" type="text" ng-model="flowNode.filterTopic">
 </div>
 
 
