almost mongoose free

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -14,10 +14,10 @@
     <div class="col-xs-12">
         <div class="alert alert-info">
           <h4>
-            <strong>Your UUID is:</strong> {{currentUser.skynetuuid}}
+            <strong>Your UUID is:</strong> {{currentUser.skynet.uuid}}
           </h4>
           <h4>
-            <strong>Your Token is:</strong> {{currentUser.skynettoken}}
+            <strong>Your Token is:</strong> {{currentUser.skynet.token}}
           </h4>
         </div>
       </div>
