initial dependencies & test of the flow-node-editor look

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
     <link href="/lib/fontawesome/css/font-awesome.css" rel="stylesheet" type="text/css"/>
     <link href="/lib/nvd3/nv.d3.css" rel="stylesheet"/>
     <link href="/lib/prism/themes/prism-coy.css" rel="stylesheet"/>
-
+    <link rel="stylesheet" href="/lib/angular-material/angular-material.css">
+    <link rel="stylesheet" href="/lib/angular-material/themes/default-theme.css">
 
     <style type="text/css">
         .reveal-animation.ng-enter {
