--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -72,6 +72,10 @@
   <div class="logo-toolbar">
     <img src="/assets/images/octoblu.png" height="50px"/>
   </div>
+  <md-content>
+  <md-card>
+<flow-browser flow="activeFlow" debug-lines="debugLines" node-types="nodeTypes" flow-node-types="flowNodeTypes" active-flow="activeFlow"></flow-browser>
 
-  <flow-browser flow="activeFlow" debug-lines="debugLines" node-types="nodeTypes" flow-node-types="flowNodeTypes" active-flow="activeFlow"></flow-browser>
-</div>
+  </md-card>
+  </md-content>
+  </div>
