--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -1,27 +1,16 @@
-<div class="flow-node-editor flow-node-editor-{{flowNodeType.type}}" ng-if="flowNodeType">
-  <div class="node-editor panel panel-default">
-    <div class="panel-heading">
-      <div class="row">
-        <div class="col-xs-10">
-          <h4>Edit Node</h4>
-        </div>
-        <div class="col-xs-2 text-right">
-          <button ng-click="close()" class="btn btn-default btn-sm"><i class="fa fa-close fa-sm"></i></button>
-        </div>
-      </div>
-    </div>
-    <div class="panel-body panel-scrollable">
-      <form class="form">
+<md-whiteframe layout="vertical" class="md-whiteframe-z1" ng-hide="!flowNodeType">  
+  <md-toolbar>
+      <div class="md-toolbar-tools">
+        <h2><span>Edit Node</span></h2>    
+        <span flex></span>  
+        <md-button ng-click="close()">Close</md-button>
+      </div>      
+    </md-toolbar>
+    <md-content>
+      <form style="padding:20px;">
         <div ng-include="flowNodeType.formTemplatePath"></div>
-        <br>
-        <div class="form-group debug-node-form">
-          <label class="pull-left" for="debug-node">Debug</label>
-          <div class="pull-right btn-group">
-            <input type="button" class="btn btn-default" ng-model="flowNode.debug" btn-radio="false" value="No">
-            <input type="button" class="btn btn-default" ng-model="flowNode.debug" btn-radio="true" value="Yes">
-          </div>
-        </div>
+        <br>      
+          <md-switch ng-model="flowNode.debug">Debug</md-switch>        
       </form>
-    </div>
-  </div>
-</div>
+    </md-content>
+</md-whiteframe>
