--- a/public/pages/node_forms/demultiplexer_form.html
+++ b/public/pages/node_forms/demultiplexer_form.html
@@ -1,4 +1,1 @@
-<div class="form-group">
-  <label for="name">Name</label>
-  <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
-</div>
+<md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
