--- a/public/pages/node_forms/get_key_form.html
+++ b/public/pages/node_forms/get_key_form.html
@@ -1,9 +1,2 @@
-<div class="form-group">
-  <label for="name">Name</label>
-  <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
-</div>
-
-<div class="form-group">
-  <label for="key">Key</label>
-  <input id="key" class="form-control" ng-model="flowNode.key" required>
-</div>
+<md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
+<md-text-float label="Key" ng-model="flowNode.key"> </md-text-float>
