--- a/public/pages/node_forms/channel_form.html
+++ b/public/pages/node_forms/channel_form.html
@@ -1,6 +1,3 @@
-<div class="form-group">
-  <label for="name">Name</label>
-  <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
-</div>
+<md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
 
 <endpoint-selector ng-model="flowNode"></endpoint-selector>
