--- a/public/pages/node_forms/compose_form.html
+++ b/public/pages/node_forms/compose_form.html
@@ -1,5 +1,6 @@
 <md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
-
+<br>
+<h3>Keys</h3>
 <md-list>
   <md-item ng-repeat="key in flowNode.composeKeys track by $index">
     <md-item-content>
