--- a/public/pages/node_forms/greater_than_form.html
+++ b/public/pages/node_forms/greater_than_form.html
@@ -1,16 +1,6 @@
-<div class="form-group">
-  <label for="name">Name</label>
-  <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
-</div>
-
-<p>( Reference incoming messages using <span ng-non-bindable>{{payload.values}}</span> )</p>
-
-<div class="form-group">
-  <label for="left">Left Value</label>
-  <input  id="left" class="form-control" type="text" ng-model="flowNode.left" required>
-</div>
-
-<div class="form-group">
-  <label for="right">Right Value</label>
-  <input  id="right" class="form-control" ng-model="flowNode.right" required>
-</div>
+<md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
+<md-content layout="vertical">
+<md-text-float label="Left" ng-model="flowNode.left"> </md-text-float>
+<div layout="horizontal" layout-align="center"><i class="fa fa-4x fa-angle-right"></i></div>
+<md-text-float label="Right" ng-model="flowNode.right"> </md-text-float>
+</md-content>
