--- a/public/pages/param-input.html
+++ b/public/pages/param-input.html
@@ -1,6 +1,7 @@
 <div>
-  <div class="form-group" ng-repeat="paramDefinition in paramDefinitions" ng-hide="paramDefinition.hidden">
-    <label for="{{paramDefinition.name}}">{{paramDefinition.displayName || paramDefinition.name}}</label>
-    <input id="{{paramDefinition.name}}" type="{{inputType(paramDefinition.type)}}" class="form-control" ng-model="params[paramDefinition.name]">
+<md-text-float ng-repeat="paramDefinition in paramDefinitions"
+  ng-hide="paramDefinition.hidden"
+  label="{{paramDefinition.displayName || paramDefinition.name}}"
+  type="{{inputType(paramDefinition.type)}}"
+  ng-model="params[paramDefinition.name]" > </md-text-float>
   </div>
-</div>
